# stingle-web

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  index.html  media-test.html  package-lock.json  package.json  phase0.html  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.live.config.ts
.github/workflows/: ci.yml
docker/: 40-validate-api-url.sh  nginx.conf.template  security-headers.conf
public/fixtures/: probe.webm
src/: main.tsx  media-test-harness.ts  media-test-main.ts  phase0-harness.ts  phase0-main.ts  styles.css
src/api/: client.ts  envelope.ts  errors.ts
src/app/: App.tsx  LibraryPanel.tsx  VirtualizedFileGrid.tsx  ZoomablePhoto.tsx
src/auth/: auth-service.ts  vault-client.ts  vault-core.ts  vault-protocol.ts  vault.worker.ts
src/crypto/: album.ts  bytes.ts  constants.ts  encoding.ts  errors.ts  file.ts  keys.ts  mnemonic.ts  pwhash.ts  sodium.ts
src/media/: client.ts  http-source.ts  image-preview.ts  protocol.ts  range.ts  service-worker.ts  task-pool.ts  upload-preparation.ts
src/sync/: mirror-store.ts  model.ts  parse.ts  sync-engine.ts
tests/browser/: auth.spec.ts  design.spec.ts  image-preview.spec.ts  library.spec.ts  live-library.spec.ts  media.spec.ts
tests/fixtures/: LIBHEIF_FIXTURE.md  README.md  desktop-v1.json
tests/integration/: live-auth.test.ts  live-mutations.test.ts  live-upload.test.ts
tools/fixture-generator/: Cargo.toml
tools/fixture-generator/src/: main.rs
(+16 files in other folders)
